<resources>
    <string name="app_name">DiceRollAdvanced</string>
    <string name="player1">Player1</string>
    <string name="player2">Player2</string>
    <string name="score1">Score</string>
    <string name="score2">Score</string>
    <string name="roll">Roll</string>
    <string name="winning_score">Enter winning score</string>
    <string name="edge_point">Enter edge point</string>
    <string name="start">Start</string>
    <string name="set_winning_score">Winning score</string>
    <string name="round">Round</string>
    <string name="cancel">Cancel</string>
    <string name="start_game">Start</string>
    <string name="reset">Reset</string>
    <string name="live_score">Live Score</string>
</resources>
