<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

    <EditText
            android:id="@+id/dialog_winner_score"
            android:hint="@string/winning_score"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <EditText
            android:id="@+id/dialog_edge_point"
            android:hint="@string/edge_point"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
        <Button
                android:id="@+id/start_btn"
                android:text="@string/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/cancel_btn"
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>