<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="15sp"
        tools:context=".MainActivity">

    <TextView android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:id="@+id/player_one"
              android:text="@string/player1"
              android:textSize="20sp"
              android:layout_gravity="end|top"

    />


    <TextView android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:id="@+id/player_two"
              android:text="@string/player2"
              android:textSize="20sp"
              android:layout_gravity="end|top"

    />


    <ImageView
            android:id="@+id/dice_image1"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/empty_dice"
            tools:src="@drawable/dice_1"/>

    <ImageView
            android:id="@+id/dice_image2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/empty_dice"
            tools:src="@drawable/dice_1"/>


    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/start_game_btn"
            android:text="@string/start_game"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
    />
    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/roll_btn"
            android:text="@string/roll"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
    />
    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reset_btn"
            android:text="@string/reset"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
    />


</LinearLayout>